# rlhf-experiments

./: .gitignore  latestreqs.txt  pyproject.toml  requirements.txt
scripts/: install.sh
scripts/tldr/: kl.sh  ppo.sh  rm.sh  sft.sh
scripts/utils/: cleanup.sh  run.sh  save_to_wandb.py
src/dips/: kl.py  parse.py  utils.py
src/dips/tldr/: kl.py  large_batch.py  unused.py  utils.py
src/dips/ultrafeedback/: default_config.yaml  prompt_truncation.ipynb  rlhf.py  sft_ultrafeedback.py
src/tldr/: fix.ipynb  kl.py  notes.ipynb  ppo.py  rebel.py  rm.py  sft.py
